<resources>
    <string name="app_name">MyCalculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_all_clear">AC</string>
    <string name="key_divide">/</string>
    <string name="key_multiply">*</string>
    <string name="key_minus">-</string>
    <string name="key_plus">+</string>
    <string name="key_result">=</string>
    <string name="zero">0</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Theme Two</string>
    <string name="theme_three">Theme Three</string>
    <string name="btn_settings">settings</string>
</resources>